--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,16 @@ body {
 .messagesContainer{
  background: #FFFFFF; 
  border: 1px solid#C5C5C5; 
+ padding: 0px 10px; 
+}
+
+.messages{
+  padding: 0px; 
+}
+
+.message{
+  padding: 5px; 
+  border: 1px solid #C5C5C5;
+  margin-bottom: 10px; 
+  display: flex;
 }
