--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,38 @@
 .App {
-  background: #FFFFFF;
+  width: 80%;
+  margin: 30px auto; 
 }
 
 body {
   margin: 0;
   padding: 0;
+  background: #EFEFEF;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.header{
+  justify-content: space-between;
+  display: flex; 
+  align-items: center;
+  padding: 10px;
+}
+
+.headerLogo{
+  margin-right: auto;
+}
+
+.headerMessageViewer{
+  margin: 0px;
+  margin-left: auto;
+  color: #646464;
+  text-transform: uppercase;
 }
 
 .messagesContainer{
  background: #FFFFFF; 
  border: 1px solid#C5C5C5; 
  padding: 0px 10px; 
+ border-radius: 10px; 
 }
 
 .messages{
@@ -18,8 +40,22 @@ body {
 }
 
 .message{
-  padding: 5px; 
+  padding: 15px; 
   border: 1px solid #C5C5C5;
   margin-bottom: 10px; 
   display: flex;
+  border-radius: 10px; 
+}
+
+.messageLeftHandProfileContent{
+  margin-right: 15px; 
+}
+
+.messageLeftHandProfileContentImage{
+  border-radius: 10px; 
+}
+
+.messageLeftHandProfileContentHandle{
+  text-align: center; 
+  margin: 5px auto;
 }
