--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ body {
 }
 
 .messageLeftContainer{
-  margin-right: 15px; 
+  margin-right: 10px; 
 }
 
 .messageLeftAvatar{
@@ -67,7 +67,7 @@ body {
 }
 
 .messageMiddleContent{
-  margin: 5px 0px;
+  margin: 5px;
 }
 
 .messageRightContainer{
@@ -78,6 +78,11 @@ body {
   color: #C09513;
 }
 
-.messageRightContainerScore{
+.messageRightStar:hover{
+  opacity: .7;
+  cursor: pointer;
+}
+
+.messageRightScore{
   margin: 5px 0px;
 }
