--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ body {
 }
 
 .messageLeftContainer{
-  margin-right: 10px; 
+  margin-right: 15px; 
 }
 
 .messageLeftAvatar{
@@ -67,7 +67,7 @@ body {
 }
 
 .messageMiddleContent{
-  margin: 5px;
+  margin: 5px 5px 0px 0px;
 }
 
 .messageRightContainer{
