--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,16 @@ body {
   background: #c23307;
   border: 1px solid #c23307;
 }
+
+.highlightInput{
+  margin-left: 10px;
+  border: 1px solid #C5C5C5;
+}
+
+
+.highlightInput, .highlightSubmitButton{
+  display: inline-block;
+  padding: 5px;
+  font-size: 14px;
+  -webkit-appearance: none;
+}
