--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,6 @@
-.App {
-	margin: 30px 50px;
-}
 
-body {
-	margin: 0;
-	padding: 0;
-	background: #EFEFEF;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
+
+/* Header */
 
 .header {
 	justify-content: space-between;
@@ -26,6 +19,8 @@ body {
 	color: #646464;
 	text-transform: uppercase;
 }
+
+/* Messages */
 
 .messagesContainer {
 	background: #FFFFFF;
@@ -48,10 +43,13 @@ body {
   justify-content: center;
 }
 
+/* Messages:Left */
+
 .messageLeftContainer {
 	display: inline-block;
 	flex-grow: 1;
 	flex-basis: 10%;
+	max-width: 200px;
 }
 
 .messageLeftAvatar {
@@ -65,6 +63,8 @@ body {
 	margin: 5px auto;
 	display: block;
 }
+
+/* Messages:Middle */
 
 .messageMiddleContainer {
 	display: inline-block;
@@ -83,9 +83,7 @@ body {
 	font-size: 12px;
 }
 
-.messageRightContainer {
-
-}
+/* Messages:Right */
 
 .messageRightButtonsContainer {
 	align-items: flex-start;
@@ -142,6 +140,8 @@ body {
 	margin: 3px;
 }
 
+/* Highlighter */
+
 .highlightInput {
 	margin-left: 10px;
 	border: 1px solid #C5C5C5;
@@ -155,7 +155,9 @@ body {
 	-webkit-appearance: none;
 }
 
-@media screen and (max-width: 400px) {
+/* Responsive */
+
+@media screen and (max-width: 500px) {
 	.App{
 		margin: 30px 15px;
 	}
